Fixed the layout issue in the checkout page.

--- a/src/main/resources/com/example/inventorymanagementsystem/css/darkTheme.css
+++ b/src/main/resources/com/example/inventorymanagementsystem/css/darkTheme.css
@@ -230,7 +230,7 @@
     -fx-border-color: #7289da;
     -fx-border-radius: 10;
     -fx-background-radius: 10;
-    -fx-padding: 15;
+    -fx-padding: 0px, 15px, 0px, 15px;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.6), 6, 0, 0, 2);
 }
 
